Bug 23178 - Undefined symbol: __gfortran_flush_i8
Summary: Undefined symbol: __gfortran_flush_i8
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: libfortran (show other bugs)
Version: 4.0.0
: P2 normal
Target Milestone: 4.0.2
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-08-01 13:30 UTC by Dale Ranta
Modified: 2005-08-01 21:15 UTC (History)
1 user (show)

See Also:
Host: powerpc-apple-darwin7.9.0
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2005-08-01 13:33:42


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dale Ranta 2005-08-01 13:30:31 UTC
I get a undefined symbol when I try to use the  -fdefault-integer-8 option -

[dranta:~/tests/gfortran-D] dir% gfortran -fdefault-integer-8 -o flush flush.f
/usr/bin/ld: Undefined symbols:
__gfortran_flush_i8
collect2: ld returned 1 exit status
[dranta:~/tests/gfortran-D] dir% cat flush.f
      program main
      write(6,*)' hi '
      call flush(6)
      stop
      end
Comment 1 Andrew Pinski 2005-08-01 13:33:42 UTC
Confirmed.
Comment 2 GCC Commits 2005-08-01 21:13:48 UTC
Subject: Bug 23178

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	fxcoudert@gcc.gnu.org	2005-08-01 21:13:39

Modified files:
	gcc/fortran    : ChangeLog 
	libgfortran    : ChangeLog 
	libgfortran/intrinsics: flush.c 

Log message:
	PR libfortran/23178
	* intrinsics/flush.c (flush_i8): Add function flush_i8. Update
	copyright years.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/fortran/ChangeLog.diff?cvsroot=gcc&r1=1.508&r2=1.509
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libgfortran/ChangeLog.diff?cvsroot=gcc&r1=1.274&r2=1.275
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libgfortran/intrinsics/flush.c.diff?cvsroot=gcc&r1=1.4&r2=1.5

Comment 3 GCC Commits 2005-08-01 21:15:28 UTC
Subject: Bug 23178

CVSROOT:	/cvs/gcc
Module name:	gcc
Branch: 	gcc-4_0-branch
Changes by:	fxcoudert@gcc.gnu.org	2005-08-01 21:15:22

Modified files:
	libgfortran    : ChangeLog 
	libgfortran/intrinsics: flush.c 

Log message:
	PR libfortran/23178
	* intrinsics/flush.c (flush_i8): Add function flush_i8. Update
	copyright years.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libgfortran/ChangeLog.diff?cvsroot=gcc&only_with_tag=gcc-4_0-branch&r1=1.163.2.70&r2=1.163.2.71
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/libgfortran/intrinsics/flush.c.diff?cvsroot=gcc&only_with_tag=gcc-4_0-branch&r1=1.4&r2=1.4.14.1

Comment 4 Francois-Xavier Coudert 2005-08-01 21:15:45 UTC
Fixed by adding the integer(8) version of flush to the library.