re PR libfortran/23178 (Undefined symbol: __gfortran_flush_i8)

PR libfortran/23178
	* intrinsics/flush.c (flush_i8): Add function flush_i8. Update
	copyright years.

From-SVN: r102642